frontend/src/css/modal.css
@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");

.modal {
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgba(61, 61, 61, 0.479);
}

.modal-content {
  background-color: #2b2b2b;
  opacity: 93%;
  margin: 15% auto;
  border: 1px solid #888;
  width: 60%;
  box-shadow: -2px 1px 3px #ffffffbe;
}

.add-file-form {
  background-color: #2b2b2b;
  display: flex;
  flex-direction: column;
}
.add-file-form > * {
  margin: 5px 0px;
  margin-right: 20px;
}

.login-form,
.modal-layout {
  display: flex;
  flex-direction: column;
}

.input-pair {
  margin: 15px 0px;
  display: flex !important;
  flex-direction: column !important;
}

.modal-interior {
  margin: 25px 20px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

.modal-interior > * {
  margin: 5px 0px;
}

.modal-title {
  font-family: "Roboto", sans-serif;
  font-size: 36pt;
  color: #d9d9d9;
  margin: 15px 0px;
}

.input-label,
.input-text {
  font-family: "Roboto", sans-serif;
  font-size: 18pt;
  color: #0075ff;
}

.input-field {
  background: transparent;
  width: 80%;
  color: #0075ff;
  font-size: 16pt;
}

::placeholder {
  color: #a5a5a5;
}

input {
  border: 1px solid #9b9b9b;
}

